--- a/map.html
+++ b/map.html
@@ -9,7 +9,8 @@
   <!-- Make the application on mobile take up the full browser screen and disable user scaling. -->
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <title>数字孪生演示项目</title>
+  <title>iPort GIS</title>
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <script src="Build/Cesium/Cesium.js"></script>
   <script src="../Build//cesium-navigation/viewerCesiumNavigationMixin.js"></script>
   <style>
