--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="panel-body">
                                 <img src="images/dg.jpg" alt="Loading..." width="100%" height="100%">
                                 <div class="button-container">
-                                    <button onclick="window.location.href='map.html';">预览3D仓库</button>
+                                    <button onclick="window.location.href='gis.html';">预览3D仓库</button>
                                 </div>
                             </div>
                         </div>
